--- a/src/index.css
+++ b/src/index.css
@@ -21,19 +21,18 @@
 }
 
 .container {
-  margin: 0 auto;
+  margin-top: 100px;
   display: flex;
   justify-items: center;
-  align-items: center;
 }
 
 .dnd-container {
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100vh;
+  align-items: start;
 }
 
 .dnd-container > * {
